2001-02-26  Sven Wischnowsky  <wischnow@zsh.org>

	* 13536: Completion/Base/_sub_commands, Completion/Core/_normal,
 	Completion/User/_apachectl, Completion/User/_init_d: some small
 	functions for completing sub-commands (generic function, init
 	scripts, apachectl)
	
	* 13534: Completion/Builtins/_fc, Completion/Builtins/_hash,
 	Completion/Builtins/_source, Completion/Builtins/_which,
 	Completion/Builtins/_zftp, Completion/User/_man,
 	Completion/User/_nedit: change $words[1] to $service in some more
 	places
	
	* 13530: Src/hist.c: properly restore noaliases in bufferwords()
	
2001-02-22  Peter Stephenson  <pws@csr.com>

	* 13520: Completion/Builtin/_vars_eq: use $service to decide
	on service; shorten description to avoid dreaded 80-character
	redisplay bug.

2001-02-20  Sven Wischnowsky  <wischnow@zsh.org>

	* 13509: Src/jobs.c: more (|un)queue_signals(), this time for the
 	job control builtins
	
2001-02-19  Peter Stephenson  <pws@csr.com>

	* Alexandre: 13280: Doc/Zsh/expn.yo, Src/hist.c, Src/string.c,
	  Src/system.h:  More sh-like and path-like handling of colon
	  modifiers.

2001-02-17  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* unposted: Doc/Zsh/metafaq.yo: site name change from Geoff.

	* 13497: Src/pattern.c: `?##' didn't work.

2001-02-16  Bart Schaefer  <schaefer@zsh.org>

	* 13495: Follow-up to 13492 to un-break "${(A)=foo=$@}".

2001-02-16  Sven Wischnowsky  <wischnow@zsh.org>

	* 13494: Completion/Core/compinit: make `compdef foo=bar' use the
 	service defined for `bar' if there is any
	
2001-02-16  Bart Schaefer  <schaefer@zsh.org>

	* 13492: Src/subst.c: Partial fix for ${1+"$@"} expanding to
	an array (still doesn't handle shwordsplit properly); fix so
	"${(A)foo=$@}" does *not* expand to an array, even though an
	array is assigned to $foo.

2001-02-14  Clint Adams  <schizo@debian.org>

	* unposted: Src/params.c: remove unused variable declaration.

	* 13478: Src/builtins.c: don't call dyncat with a NULL argument.
